Encrypt password.